- Revamp update system
- Recomment my shit

2.1
- Fixed message being removed with reaction gif feature
- Modifiable frame limit for video gifs (config)
- Commented some config values
- Fixed for 100th time bot responding to not pinged messages (executes commands from pings not mentions)
- Renamed confusing CMG variable in the config and actions.py

2.0
- Now russian roulette is actually accurate (1/6 chances) (will add option to modify the odds in settings)
- Russian roulette now saves results of the game in log
- Not switching to slashcommands never again (it took me like a month and still reverted the changes)
- Removed setup.py, it was shit - gonna remake
- Fully fixed ffmpeg jankyness with colors (pics and vids)
- Moved most 2.0 stuff to 2.1 or nothing
- Created YellowTemplate and YellowBoombox (available on my github)
- Renamed and revamped gif creating function(s) (and removed copy made for reactions feature)
- Verbose logging now as a option for gif creation (config)
- Modifiable max file size for videos (gifs, config)
- Temp with better cleanup logic
- Fixed code spacing lol
- Updated .gitignore with my new found knowledge

1.9
- Silented down all of the ffmpeg output (not really)
- Added restart command (admin only)
- Removed out invite command
- Added triple message feature (bloody marry ahh thing)
- Renamed media variables
- Unhardcoded nicktrack channel id (i forgot :c)
- Fixed some encoding errors with logging
- Makeover for config file
- Improved ban/unban notices
- Made update autorestart the bot

1.8
- Switched over to TOML
- Moved config file to "files" folder
- Organized files
- Removed need to load config for each file
- Updated check_files function to support TOML
- Finally moved to real bool's
- Now TOML is required package
- For the infinite time changed variables order
- Removed configparser package
- Changed config loading to be global and localized inside bot_instance file
- Fixed forcenick_enabled (now it actually does anything)